<resources>
    <string name="app_name">Android News</string>
    <string name="search_title">Term Search</string>
    <string name="search_input">Search</string>
    <string name="search_button">Search</string>
    <string name="map_title">News by Location</string>
    <string name="map_button">View Map</string>
    <string name="headlines_title">Top Headlines</string>
    <string name="headlines_button">View Top Headlines</string>
    <string name="category_title">Category</string>
    <string name="sources_title">Sources</string>
    <string name="skip_button">Skip (search all sources)</string>
    <string name="source_title">Search for %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="geocoder_no_results">No results for location!</string>
    <string name="no_results">No results found.</string>
    <string name="no_sources">No sources found.</string>
    <string name="map_query_title">Results for %1$s</string>
    <string name="next_button">Next Page</string>
    <string name="prev_button">Prev Page</string>
    <string name="current_page">Page %1$s of 5</string>
    <string name="headlines_results">Results</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="results_title_source">%1$s results for %2$s</string>
    <string name="results_title">Results for %1$s</string>

</resources>